--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
 #  image_picker: ^1.0.2
 #   Local Data Cache
   shared_preferences: ^2.2.0
+  lottie: ^3.0.0
 
 
 
@@ -81,6 +82,7 @@ flutter:
   assets:
       - assets/images/
       - assets/svgs/
+      - assets/lotties/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
