--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
 #  image_picker: ^1.0.2
 #   Local Data Cache
   shared_preferences: ^2.2.0
+  jwt_decoder: ^2.0.1
   lottie: ^3.0.0
 
 
