--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   #splash
-  flutter_native_splash: ^2.3.9
+  flutter_native_splash: ^2.3.10
   #responsive
   flutter_screenutil: ^5.9.0
   #state_mangment
-  get: ^4.6.6
-#  networking
+  get: ^4.6.5
+  #networking
   http: ^0.13.6
   dartz: ^0.10.1
   #Images
@@ -52,6 +52,9 @@ dependencies:
   shared_preferences: ^2.2.0
   jwt_decoder: ^2.0.1
   lottie: ^3.0.0
+  cached_network_image: ^3.3.1
+  #DateTime
+
 
 
 
@@ -67,6 +70,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+#  flutter_launcher_icons: ^0.13.1
+#flutter_icons:
+#  android: true
+#  ios: true
+#  image_path: "assets/images/splash_screen.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
